// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

<button
  class="c0"
  elevation="1"
  kind="primary"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle "
      data-icon="circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style="margin-right: 0.5rem;"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256z"
        fill="currentColor"
      />
    </svg>
    Hello world
  </div>
</button>
`;

exports[`it works 2`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

<button
  class="c0"
  elevation="1"
  kind="secondary"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle "
      data-icon="circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style="margin-right: 0.5rem;"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256z"
        fill="currentColor"
      />
    </svg>
    Hello world
  </div>
</button>
`;

exports[`it works 3`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

<button
  class="c0"
  elevation="1"
  kind="tertiary"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle "
      data-icon="circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style="margin-right: 0.5rem;"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256z"
        fill="currentColor"
      />
    </svg>
    Hello world
  </div>
</button>
`;

exports[`it works 4`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

<button
  class="c0"
  elevation="1"
  kind="danger"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle "
      data-icon="circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style="margin-right: 0.5rem;"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256z"
        fill="currentColor"
      />
    </svg>
    Hello world
  </div>
</button>
`;

exports[`it works with checked 1`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

<button
  class="c0"
  elevation="1"
  kind="primary"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle-dot "
      data-icon="circle-dot"
      data-prefix="fas"
      focusable="false"
      role="img"
      style="margin-right: 0.5rem;"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM256 352C309 352 352 309 352 256C352 202.1 309 160 256 160C202.1 160 160 202.1 160 256C160 309 202.1 352 256 352z"
        fill="currentColor"
      />
    </svg>
    Hello world
  </div>
</button>
`;

exports[`it works with checked 2`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

<button
  class="c0"
  elevation="1"
  kind="secondary"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle-dot "
      data-icon="circle-dot"
      data-prefix="fas"
      focusable="false"
      role="img"
      style="margin-right: 0.5rem;"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM256 352C309 352 352 309 352 256C352 202.1 309 160 256 160C202.1 160 160 202.1 160 256C160 309 202.1 352 256 352z"
        fill="currentColor"
      />
    </svg>
    Hello world
  </div>
</button>
`;

exports[`it works with checked 3`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

<button
  class="c0"
  elevation="1"
  kind="tertiary"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle-dot "
      data-icon="circle-dot"
      data-prefix="fas"
      focusable="false"
      role="img"
      style="margin-right: 0.5rem;"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM256 352C309 352 352 309 352 256C352 202.1 309 160 256 160C202.1 160 160 202.1 160 256C160 309 202.1 352 256 352z"
        fill="currentColor"
      />
    </svg>
    Hello world
  </div>
</button>
`;

exports[`it works with checked 4`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

<button
  class="c0"
  elevation="1"
  kind="danger"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle-dot "
      data-icon="circle-dot"
      data-prefix="fas"
      focusable="false"
      role="img"
      style="margin-right: 0.5rem;"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM256 352C309 352 352 309 352 256C352 202.1 309 160 256 160C202.1 160 160 202.1 160 256C160 309 202.1 352 256 352z"
        fill="currentColor"
      />
    </svg>
    Hello world
  </div>
</button>
`;
